@@ -12,6 +12,8 @@ What's New in Python 2.5 alpha 1?
 Core and builtins
 -----------------
 
+- SF Bug #976608: fix SystemError when mtime of an imported file is -1.
+
 - SF Bug #887946: fix segfault when redirecting stdin from a directory.
   Provide a warning when a directory is passed on the command line.
 
